Fix color contrast of hello-box

--- a/public/css/hello-box.css
+++ b/public/css/hello-box.css
@@ -1,7 +1,7 @@
 .hello-box {
 	font-size: 1.6em;
 	font-style: italic;
-	color:#888;
+	color:#555;
 	margin-bottom: 2em;
 }
 
